fix: decresing the margin top on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -76,7 +76,7 @@ body {
 
 /* Responsividade */
 @media (max-width: 768px) {
-    hero {
+    .hero {
         margin-top: 16px;
     }
     .hero h1 {
